更新了新的mod

--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -10,6 +10,7 @@ entitiesalwaysinfernal {
     B:EntityDragon=false
     B:EntityEnderman=false
     B:EntityEndermite=false
+    B:EntityEvilWizard=false
     B:EntityGhast=false
     B:EntityGorgon=false
     B:EntityHusk=false
@@ -99,6 +100,7 @@ permittedentities {
     B:EntityDragon=true
     B:EntityEnderman=true
     B:EntityEndermite=true
+    B:EntityEvilWizard=true
     B:EntityGhast=true
     B:EntityGorgon=true
     B:EntityHusk=true
