Signed-off-by: moheng233 <57742561+moheng233@users.noreply.github.com>

--- a/config/ebwizardry/ebwizardry.cfg
+++ b/config/ebwizardry/ebwizardry.cfg
@@ -305,7 +305,7 @@ spells {
     # 向目标发射闪电，并弹射到一定范围内的多个敌人身上进行连锁攻击，闪电可以进行两次跳跃连锁。
     B:"ebwizardry:chain_lightning"=true
 
-    # 向指向的方向高速冲锋，并撞飞沿途所有目标。
+    # 向指向的方向高速冲锋，并撞飞沿途所有目标。（可以转弯）
     B:"ebwizardry:charge"=true
 
     # 记录一个坐标后，释放此魔法帮助你回到该坐标。 首先潜行右击可以设置一个坐标；当你离开一段距离后，施展此法术，它就会用绿色光斑连接成的路线指引你回去。90秒后这些光斑则会消失。
@@ -416,7 +416,7 @@ spells {
     # 创造一把燃烧的斧头，会点燃击中的敌人，斧头存在时间30秒。
     B:"ebwizardry:flaming_axe"=true
 
-    # 暂时性的将火焰的力量附加在物品栏的第一件武器上，使其能够点燃被其攻击的敌人，法术在45秒后失效。
+    # 暂时性的将火焰的力量附加在快捷栏的第一件武器上，使其能够点燃被其攻击的敌人，法术在45秒后失效。
     B:"ebwizardry:flaming_weapon"=true
 
     # 像鹰一样翱翔。
@@ -438,6 +438,9 @@ spells {
     B:"ebwizardry:forcefield"=true
 
     # 密林幽隐地，
+    # 巫师咒初成。
+    # 秘法唤遗术，
+    # 荆棘森然生。
     B:"ebwizardry:forest_of_thorns"=true
 
     # “你竟敢闯入我的森林！”
@@ -446,7 +449,7 @@ spells {
     # 冰冻目标10秒，也能把水冻结或在地表造雪。
     B:"ebwizardry:freeze"=true
 
-    # 暂时性的将冰霜的力量附加在物品栏的第一件武器上，使其能够冰冻被其攻击的敌人。法术在45秒后失效。
+    # 暂时性的将冰霜的力量附加在快捷栏的第一件武器上，使其能够冰冻被其攻击的敌人。法术在45秒后失效。
     B:"ebwizardry:freezing_weapon"=true
 
     # 制造一把冰霜之斧，击中敌人时将其冻伤，冰霜之斧存在时间30秒。
@@ -527,7 +530,7 @@ spells {
     # 将目标点燃十秒，也能像打火石一样工作。
     B:"ebwizardry:ignite"=true
 
-    # 暂时的为物品栏上的第一把武器注魔，使其变得更加强力。注魔魔法将会持续45秒钟。
+    # 暂时的为快捷栏上的第一把武器注魔，使其变得更加强力。注魔魔法将会持续45秒钟。
     B:"ebwizardry:imbue_weapon"=true
 
     # 发出虚空中的可怖咆哮声，使周围所有生物陷入恐惧状态而四散逃离，恐惧状态将持续30秒。
@@ -617,7 +620,7 @@ spells {
     # 黑暗将吞噬一切……
     B:"ebwizardry:plague_of_darkness"=true
 
-    # 每次施法可以熔炼5个可被熔炼的物品（可以是不同的物品），物品栏中的物品会被优先熔炼。
+    # 每次施法可以熔炼5个可被熔炼的物品（可以是不同的物品），快捷栏中的物品会被优先熔炼。
     B:"ebwizardry:pocket_furnace"=true
 
     # 为施法者打开工作台界面以便合成物品。
