--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -21,6 +21,7 @@ entitiesalwaysinfernal {
     B:EntitySlime=false
     B:EntitySpider=false
     B:EntityTroll=false
+    B:EntityVindicator=false
     B:EntityWitch=false
     B:EntityWitherSkeleton=false
     B:EntityZombie=false
@@ -33,6 +34,7 @@ entitybasehealth {
     D:EntityCaveSpider=12.0
     D:EntityCreeper=20.0
     D:EntityEnderman=40.0
+    D:EntityEvilWizard=30.0
     D:EntityGorgon=100.0
     D:EntityHusk=20.0
     D:EntityHydra=200.0
@@ -40,6 +42,7 @@ entitybasehealth {
     D:EntitySkeleton=20.0
     D:EntitySlime=4.0
     D:EntitySpider=16.0
+    D:EntityVindicator=24.0
     D:EntityWitch=26.0
     D:EntityZombie=20.0
 }
@@ -111,6 +114,7 @@ permittedentities {
     B:EntitySlime=true
     B:EntitySpider=true
     B:EntityTroll=true
+    B:EntityVindicator=true
     B:EntityWitch=true
     B:EntityWitherSkeleton=true
     B:EntityZombie=true
