--- a/hmclversion.cfg
+++ b/hmclversion.cfg
@@ -2,14 +2,14 @@
   "usesGlobal": false,
   "javaArgs": "",
   "minecraftArgs": "",
-  "maxMemory": 5000,
+  "maxMemory": 6000,
   "permSize": "",
   "width": 854,
   "height": 480,
-  "javaDir": "C:\\Program Files\\jdk-8.0.242.08-openj9\\bin\\java.exe",
-  "precalledCommand": "",
+  "javaDir": "C:\\Program Files\\AdoptOpenJDK\\jdk-8.0.242.08-openj9\\bin\\java.exe",
+  "precalledCommand": "$INST_JAVA -jar serversync-3.5.1.jar progress-only",
   "serverIp": "",
-  "java": "Custom",
+  "java": "1.8.0_151",
   "wrapper": "",
   "fullscreen": false,
   "noJVMArgs": false,
@@ -18,5 +18,6 @@
   "showLogs": false,
   "gameDir": "",
   "launcherVisibility": 1,
-  "gameDirType": 1
+  "gameDirType": 1,
+  "defaultJavaPath": "C:\\Program Files\\Java\\jre1.8.0_151\\bin\\java.exe"
 }
