--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -3,15 +3,6 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-392594337 {
-    B:bookmarkOverlayEnabled=true
-    B:cheatItemsEnabled=false
-    B:editEnabled=false
-    S:filterText=duan
-    B:overlayEnabled=true
-}
-
-
-world-804704861 {
     # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=true
 
@@ -20,23 +11,39 @@ world-804704861 {
 
     # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=
+    S:filterText=molit
 
     # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
 
-world1544803905 {
+world-804704861 {
+    B:bookmarkOverlayEnabled=true
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1544803905 {
+    S:filterText=molit
 }
 
 
 world805325770 {
+    # 在打开的 GUI 一侧显示书签列表。
     B:bookmarkOverlayEnabled=false
+
+    # 给予物品而非显示其配方。
     B:cheatItemsEnabled=false
+
+    # 在列表中点击物品以隐藏或取消隐藏。
     B:editEnabled=false
-    S:filterText=kuangc
+    S:filterText=lans
+
+    # 在打开的 GUI 一侧显示物品列表。
     B:overlayEnabled=true
 }
 
